2006-06-10  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* lib/Makefile.in: Added urlmon-uuid and hlink-uuid as sources and
	objects.
	* lib/uuid.c (IID_IAuthenticate, IID_IBindHost, IID_IBindProtocol,
	IID_IBindStatusCallback, IID_IBindStatusCallbackMsg, IID_IBinding,
	IID_IHlink, IID_IHlinkBrowseContext, IID_IHlinkFrame, IID_IHlinkSite,
	IID_IHlinkTarget): Remove.  Moved to new files.
	* lib/urlmon-uuid.c: New file.
	* lib/hlink-uuid.c: New file.

2006-06-10  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* lib/Makefile.in: Added ativscp-uuid as source and object.
	* lib/uuid.c (IID_IActiveScript, IID_IActiveScriptError,
	IID_IActiveScriptParse, IID_IActiveScriptSite,
	IID_IActiveScriptSiteWindow): Remove.  Moved to ativscp-uuid.c.
	* lib/ativscp-uuid.c: New file.

2006-06-09  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* lib/uuid.c (IID_IClientSecurity, IID_IMallocSpy, IID_IServerSecurity):
	Remove.  Moved to objidl-uuid.c
	* lib/objidl-uuid.c (IID_IClientSecurity, IID_IMallocSpy,
	IID_IServerSecurity): Defined.

2006-06-09  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* lib/Makefile.in: Add cguid-uuid and olectlid-uuid as sources and
	objects.
	* lib/uuid.c (CLSID_CColorPropPage, CLSID_CFontPropPage,
	CLSID_CPicturePropPage, CLSID_Picture_Dib, CLSID_Picture_Metafile,
	CLSID_StdFont, CLSID_StdPicture, GUID_NULL, IID_ICreateTypeInfo,
	IID_ICreateTypeInfo2, IID_ICreateTypeLib, IID_ICreateTypeLib2, IID_IDebug,
	IID_IDebugStream, IID_IDispatch, IID_IEnumFORMATETC,IID_IEnumMoniker,
	IID_IEnumOLEVERB, IID_IEnumSTATDATA, IID_IEnumSTATSTG, IID_IEnumString,
	IID_IEnumUnknown, IID_IEnumVARIANT, IID_IOleLink, IID_IPSFactory,
	IID_IRpcChannel, IID_IRpcProxy, IID_IRpcStub, IID_ITypeInfo,
	IID_ITypeInfo2, IID_ITypeLib, IID_ITypeLib2): Remove.  Moved to relevant
	files.
	* lib/oaidl-uuid.c (IID_ICreateTypeInfo, IID_ICreateTypeInfo2,
	IID_ICreateTypeLib, IID_ICreateTypeLib2, IID_ITypeInfo, IID_ITypeInfo2,