@@ -1,5 +1,14 @@
 2006-06-10  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>
 
+	* lib/uuid.c (CLSID_StaticDib, CLSID_StaticMetafile, CLSID_StdHlink,
+	CLSID_StdHlinkBrowseContext): Remove.  Moved to relevant files.
+	* lib/cguid-uuid.c (CLSID_StaticDib, CLSID_StaticMetafile): Added.
+	* lib/hlguids-uuid.c: New file.
+	Thank you to Julien Lecomte (julienlecomte at users dot sourceforge dot
+	net).
+
+2006-06-10  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>
+
 	* lib/Makefile.in: Added urlmon-uuid and hlink-uuid as sources and
 	objects.
 	* lib/uuid.c (IID_IAuthenticate, IID_IBindHost, IID_IBindProtocol,
